<resources>
    <string name="app_name">Azur Compendium</string>
    <string name="btnDD">Destroyers(DD)</string>
    <string name="btnCL">Light Cruisers(CL)</string>
    <string name="btnCA">Heavy Cruisers(CA)</string>
    <string name="btnBB">Battleships/Battle cruisers(BB/BC)</string>
    <string name="btnCV">Carriers/Light Carriers(CV/CVL)</string>
    <string name="btnDownload">Debug</string>
    <string name="lblNameShip">No Ship Name</string>
    <string name="descriptorImage">No description found</string>
    
    <string name="btnSelectShip">-- Select your Shipfu --</string>
    <string name="chkAttributes">Edit/View Ship Stats</string>
    <string name="lblFP">FP: </string>
    <string name="lblEff1">Eff: </string>
    <string name="btnStats">Apply</string>

    <string name="btnSelectWeapon">-- Select your Weapon --</string>

    <string name="rdCL">CL</string>
    <string name="rdDD">DD</string>

    <string name="lblEnhance">Enhance: +%1$d</string>

    <string name="lblMainGun">= Main Gun Overview =</string>
    <string name="lblMainDMG">Base Damage: %1$.2fx%2$d</string>
    <string name="lblMainRoF">Base RoF: %1$.2f s</string>
    <string name="lblMainCoeff">Coefficient: %1$.0f%2$s</string>
    <string name="lblMainAmmo">Ammo: %1$s</string>

    <string name="lblMainGunDps">= Main Gun DPS =</string>
    <string name="lblMainGunBB">= Full Burst Damage =</string>
    <string name="lblMainGunDpsNum">%1$.2f for Light Armor\n
                                    %2$.2f for Medium Armor\n
                                    %3$.2f for Heavy Armor\n</string>
    <!-- Strings used for fragments for navigation -->

</resources>
